--- a/frontend/app/app.component.html
+++ b/frontend/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="site-wrapper-inner">
     <div class="cover-container">
       <navbar></navbar>
-
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
