--- a/frontend/app/components/navbar.component.html
+++ b/frontend/app/components/navbar.component.html
@@ -11,9 +11,8 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
+        <li><a routerLink="/registration" routerLinkActive="active">Register</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
