--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,7 +1,16 @@
 body {
   padding-top: 50px;
 }
+
 .starter-template {
   padding: 40px 15px;
   text-align: center;
+}
+
+.box {
+  border: 1px solid red;
+}
+
+.router-outlet {
+  margin-top: 50px;
 }
