--- a/frontend/app/app.component.html
+++ b/frontend/app/app.component.html
@@ -1,8 +1,5 @@
-<div class="site-wrapper">
-  <div class="site-wrapper-inner">
-    <div class="cover-container">
-      <navbar></navbar>
-      <router-outlet></router-outlet>
-    </div>
-  </div>
+<navbar></navbar>
+<div class="container box router-outlet">
+  <router-outlet></router-outlet>
 </div>
+
