--- a/frontend/app/components/registration.component.html
+++ b/frontend/app/components/registration.component.html
@@ -1,1 +1,16 @@
-<h1>here is the registration page</h1>
+<form>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Username</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Username">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+  </div>
+
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
