--- a/frontend/app/components/registration.component.html
+++ b/frontend/app/components/registration.component.html
@@ -1,15 +1,18 @@
-<form>
+<form (ngSubmit)="onSubmit()"> {{user.username}}, {{user.password}}, {{user.email}}
   <div class="form-group">
-    <label for="exampleInputPassword1">Username</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Username">
+    <label for="username">Username</label>
+    <input type="text" class="form-control" id="username" placeholder="Username" required [(ngModel)]="user.username"
+           name="username">
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <label for="password">Password</label>
+    <input type="password" class="form-control" id="password" placeholder="Password" required
+           [(ngModel)]="user.password" name="password">
   </div>
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" required
+           [(ngModel)]="user.email" name="email">
   </div>
 
   <button type="submit" class="btn btn-default">Submit</button>
