needs to add security

--- a/frontend/app/components/navbar.component.html
+++ b/frontend/app/components/navbar.component.html
@@ -13,6 +13,7 @@
       <ul class="nav navbar-nav">
         <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
         <li><a routerLink="/registration" routerLinkActive="active">Register</a></li>
+        <li><a routerLink="/my-profile" routerLinkActive="active">My Profile</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
