--- a/frontend/app/components/navbar.component.html
+++ b/frontend/app/components/navbar.component.html
@@ -14,6 +14,7 @@
         <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
         <li><a routerLink="/registration" routerLinkActive="active">Register</a></li>
         <li><a routerLink="/my-profile" routerLinkActive="active">My Profile</a></li>
+        <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
